fixed all auth google login

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -58,7 +58,7 @@
                 </li>
             </ul>
             <!-- user btn grp -->
-            <div>
+            <div class="btn-group">
                 <button type="button" class="btn nav-user ms-auto px-2" data-bs-toggle="dropdown" aria-expanded="false">
                     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                         class="bi bi-person-fill color-teal" viewBox="0 0 16 16">
