--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 
-<div class="row justify-content-center">
-    <div class="col-6 border-1 m-t-75 p-4">
+<div class="row justify-content-center px-3">
+    <div class="col-sm-8 col-xs-6 border-1 mt-5 p-4">
         <div class="text-center">
             <h1>Reset your password</h1>
         </div>
