--- a/administration/templates/administration/pending-users.html
+++ b/administration/templates/administration/pending-users.html
@@ -44,6 +44,7 @@
                             <th>#</th>
                             <th>First Name</th>
                             <th>Last Name</th>
+                            <th>Date Completed</th>
                             <th class="text-center">Actions</th>
                         </tr>
                     </thead>
@@ -51,9 +52,10 @@
                         {% for user in users %}
 
                         <tr>
-                            <td>{{forloop.counter}}</td>
+                            <td>{{ forloop.counter0|add:page_obj.start_index }}</td>
                             <td>{{user.user.first_name}}</td>
                             <td>{{user.user.last_name}}</td>
+                            <td>{{user.test_completed}}</td>
                             <td>
                                 <div class="d-flex justify-content-evenly">
                                 <a
