--- a/administration/templates/administration/assigned-users.html
+++ b/administration/templates/administration/assigned-users.html
@@ -51,7 +51,7 @@
                         {% for user in users %}
 
                         <tr>
-                            <td>{{forloop.counter}}</td>
+                            <td>{{ forloop.counter0|add:page_obj.start_index }}</td>
                             <td>{{user.user.user.first_name}}</td>
                             <td>{{user.user.user.last_name}}</td>
                             <td></td>
