--- a/administration/templates/administration/schedules/upcoming.html
+++ b/administration/templates/administration/schedules/upcoming.html
@@ -44,7 +44,7 @@
           <tbody>
             {% for user in upcoming %}
             <tr>
-              <th scope="row">{{forloop.counter}}</th>
+              <th scope="row">{{ forloop.counter0|add:page_obj.start_index }}</th>
               <td>{{user.user.user.first_name}}</td>
               <td>{{user.user.user.last_name}}</td>
               <td>{{user.scheduled_date.date}}</td>
