--- a/administration/templates/administration/user_management.html
+++ b/administration/templates/administration/user_management.html
@@ -41,6 +41,7 @@
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>Email</th>
+                        <th>Date Joined</th>
                         <th>Is_superuser</th>
                         <th>Edit</th>
                     </tr>
@@ -52,6 +53,7 @@
                         <td>{{user.first_name|capfirst}}</td>
                         <td>{{user.last_name|capfirst}}</td>
                         <td>{{user.email}}</td>
+                        <td>{{user.date_joined}}</td>
                         <td>{% if user.is_superuser == False %}
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="red" class="bi bi-x"
                                 viewBox="0 0 16 16">
