--- a/staticfiles/css/stats.css
+++ b/staticfiles/css/stats.css
@@ -59,3 +59,14 @@
       padding: 0px;
       margin: 0px;
   }
+
+  @media screen and (max-width: 576px) {
+    .traits-box {
+        border: 3px solid #008080;
+        border-radius: 25px;
+        margin: 4px 4px 4px 4px;
+        box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+        transition: 0.5s;
+      }
+    
+  }
