--- a/administration/templates/administration/schedules/history.html
+++ b/administration/templates/administration/schedules/history.html
@@ -89,23 +89,43 @@
                     </div>
                   </div>
                   {% endif %}
-                {% if is_paginated %}
-      <nav aria-label="Page navigation" class="m-5">
-        <ul class="pagination justify-content-end">
-          {% if page_obj.has_previous %}
-          <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-          {% endif %}
-          {% for i in page_obj.paginator.page_range %}
-          <li class="page-item {% if page_obj.number == i %}disabled{% endif %}"><a class="page-link"
-              href="?page={{ i }}">{{i}}</a></li>
-          {% endfor %}
-          {% if page_obj.has_next %}
-          <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT
-              &raquo;</a></li>
-          {% endif %}
-        </ul>
-      </nav>
-      {% endif %}
+                  {% if is_paginated %}
+                  <div>
+                    <nav aria-label="Page navigation" class="m-5">
+                        <ul class="pagination justify-content-end">
+    
+                            {% if page_obj.has_previous %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page=1" aria-label="Previous">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">PREV </a></li>
+                            {% endif %}
+    
+                            {% for n in page_obj.paginator.page_range %}
+                            {% if page_obj.number == n %}
+                            <li class="page-item {% if page_obj.number == n %}disabled{% endif %}">
+                                <span class="page-link">{{ n }}</span>
+                            </li>
+                            {% elif n > page_obj.number|add:'-5' and n < page_obj.number|add:'5' %} <li class="page-item">
+                                <a class="page-link" href="?page={{ n }}">{{ n }}</a>
+                                </li>
+                                {% endif %}
+                                {% endfor %}
+                                {% if page_obj.has_next %}
+                                <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT
+                                    </a></li>
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                                {% endif %}
+                        </ul>
+                    </nav>
+                  </div>
+                    {% endif %}
                 
                 
             </div>
