removed pagination xaxis margin

--- a/administration/templates/administration/schedules/history.html
+++ b/administration/templates/administration/schedules/history.html
@@ -91,7 +91,7 @@
                   {% endif %}
                   {% if is_paginated %}
                   <div>
-                    <nav aria-label="Page navigation" class="m-5">
+                    <nav aria-label="Page navigation" class="mt-5">
                         <ul class="pagination justify-content-end">
     
                             {% if page_obj.has_previous %}
