--- a/administration/templates/administration/assigned-users.html
+++ b/administration/templates/administration/assigned-users.html
@@ -74,7 +74,7 @@
             </div>
             {% if is_paginated %}
             <div>
-                <nav aria-label="Page navigation" class="m-5">
+                <nav aria-label="Page navigation" class="mt-5">
                     <ul class="pagination justify-content-end">
 
                         {% if page_obj.has_previous %}
