--- a/administration/templates/administration/user_management.html
+++ b/administration/templates/administration/user_management.html
@@ -93,7 +93,7 @@
         <!-- Pagination -->
         {% if is_paginated %}
         <div>
-            <nav aria-label="Page navigation" class="m-5">
+            <nav aria-label="Page navigation" class="mt-5">
                 <ul class="pagination justify-content-end">
 
                     {% if page_obj.has_previous %}
