--- a/administration/templates/administration/schedules/schedules.html
+++ b/administration/templates/administration/schedules/schedules.html
@@ -6,9 +6,9 @@
 <header>
   {% include 'partials/_navbar.html' %}
 </header>
-<main class="container">
+<main class="container mt-5">
   <div class="row justify-content-center mt-3">
-    <div class="col-sm-4 col-xs-6">
+    <div class="col-sm-4 col-xs-6 mt-5">
       <h1>Schedule Log</h1>
       <div class="list-group">
         <a href="{% url 'administration:schedules' %}" class="list-group-item item-badge-between link-teal">
