--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -54,7 +54,7 @@
             </div>
     </section>
 </main>
-<footer>
+<footer class="page-footer font-small pt-4">
     {% include 'partials/footer.html' %}
 </footer>
 {% endblock %}
