--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -9,74 +9,99 @@
         <div class="col-sm-8 col-xs-6 p-4 border-1-round-box">
             <h3 class="mb-4">Register</h3>
 
-            <form method="post">
+            <form method="post" id="registerForm" data-profile-url="{% url 'accounts:register' %}">
                 {% csrf_token %}
-                <div class="row mb-3">
-                    <div class="col-sm-6 col-xs-6">
-                        <label for="">{{form.first_name.label}}</label>
-                        {{form.first_name}}
-                        <p class="text-danger ms-3">{{form.first_name.errors }}</p>
-                    </div>
-                    <div class="col-sm-6 col-xs-6">
-                        <label for="">{{form.last_name.label}}</label>
-                        {{form.last_name}}
-                        <p class="text-danger ms-3">{{form.last_name.errors }}</p>
-                    </div>
-                </div>
-                <div class="row mb-3">
-                    <div class="col-sm-6 col-xs-6">
-                        <label for="">{{form.gender.label}}</label>
-                        {{form.gender}}
-                    </div>
-                    <div class="col-sm-6 col-xs-6">
-                        <label for="">{{form.date_of_birth.label}}</label>
-                        <div class="input-group">{{form.date_of_birth}}</div>
-                        {{form.date_of_birth.errors}}
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="">{{form.username.label}}</label>
-                    {{form.username}}
-                </div>
-                {% if form.username.errors %}
-                {{form.username.errors}}
-                <div class="alert alert-secondary">
-                    <ul>
-                        <li>Usernames can consist of lowercase and capitals</li>
-                        <li>Usernames can consist of alphanumeric characters</li>
-                        <li>Usernames can consist of underscore and hyphens and spaces</li>
-                        <li>Cannot be two underscores, two hypens or two spaces in a row</li>
-                        <li>Cannot have a underscore, hypen or space at the start or end</li>
-                    </ul>
-                </div>
-                {% endif %}
-                <div class="mb-3">
-                    <label for="">{{form.email.label}}</label>
-                    {{form.email}}
-                    {{form.email.errors}}
-                </div>
+                <!--                <div class="row mb-3">-->
+                <!--                    <div class="col-sm-6 col-xs-6">-->
+                <!--                        <label for="">{{form.first_name.label}}</label>-->
+                <!--                        {{form.first_name}}-->
+                <!--                        <p class="text-danger ms-3">{{form.first_name.errors }}</p>-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-6 col-xs-6">-->
+                <!--                        <label for="">{{form.last_name.label}}</label>-->
+                <!--                        {{form.last_name}}-->
+                <!--                        <p class="text-danger ms-3">{{form.last_name.errors }}</p>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="row mb-3">-->
+                <!--                    <div class="col-sm-6 col-xs-6">-->
+                <!--                        <label for="">{{form.gender.label}}</label>-->
+                <!--                        {{form.gender}}-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-6 col-xs-6">-->
+                <!--                        <label for="">{{form.date_of_birth.label}}</label>-->
+                <!--                        <div class="input-group">{{form.date_of_birth}}</div>-->
+                <!--                        {{form.date_of_birth.errors}}-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="mb-3">-->
+                <!--                    <label for="">{{form.username.label}}</label>-->
+                <!--                    {{form.username}}-->
+                <!--                </div>-->
+                <!--                {% if form.username.errors %}-->
+                <!--                {{form.username.errors}}-->
+                <!--                <div class="alert alert-secondary">-->
+                <!--                    <ul>-->
+                <!--                        <li>Usernames can consist of lowercase and capitals</li>-->
+                <!--                        <li>Usernames can consist of alphanumeric characters</li>-->
+                <!--                        <li>Usernames can consist of underscore and hyphens and spaces</li>-->
+                <!--                        <li>Cannot be two underscores, two hypens or two spaces in a row</li>-->
+                <!--                        <li>Cannot have a underscore, hypen or space at the start or end</li>-->
+                <!--                    </ul>-->
+                <!--                </div>-->
+                <!--                {% endif %}-->
+                <!--                <div class="mb-3">-->
+                <!--                    <label for="">{{form.email.label}}</label>-->
+                <!--                    {{form.email}}-->
+                <!--                    {{form.email.errors}}-->
+                <!--                </div>-->
 
-                <div class="row mb-3">
-                    <div class="col-sm-6 col-xs-6">
-                        <label for="">{{form.password1.label}}</label>
-                        {{form.password1}}
-                        {{form.password1.errors}}
+                <!--                <div class="row mb-3">-->
+                <!--                    <div class="col-sm-6 col-xs-6">-->
+                <!--                        <label for="">{{form.password1.label}}</label>-->
+                <!--                        {{form.password1}}-->
+                <!--                        {{form.password1.errors}}-->
+                <!--                    </div>-->
+                <!--                    <div class="col-sm-6 col-xs-6">-->
+                <!--                        <label for="">{{form.password2.label}}</label>-->
+                <!--                        {{form.password2}}-->
+                <!--                        {{form.password2.errors}}-->
+                <!--                    </div>-->
+                <!--                    {% if form.password1.errors %}-->
+                <!--                    <div class="alert alert-secondary">-->
+                <!--                        <p>Password should be:</p>-->
+                <!--                        <ul>-->
+                <!--                            <li>Minimum of eight characters</li>-->
+                <!--                            <li>Must include a mix of upper and lower case</li>-->
+                <!--                            <li>Must include a number</li>-->
+                <!--                        </ul>-->
+                <!--                    </div>-->
+                <!--                    {% endif %}-->
+                <!--                </div>-->
+                <!--                <div class="d-flex justify-content-center">-->
+                <!--                    <input type="submit" value="Submit" class="btn btn-style w-100 mt-3">-->
+                <!--                </div>-->
+                {{ form.as_p }}
+                <div class="ui selection dropdown" id="dept">
+                    <input type="hidden" name="dept">
+                    <i class="dropdown icon"></i>
+                    <div class="default text">Department</div>
+                    <div class="menu" id="dept-data-box">
                     </div>
-                    <div class="col-sm-6 col-xs-6">
-                        <label for="">{{form.password2.label}}</label>
-                        {{form.password2}}
-                        {{form.password2.errors}}
+                </div>
+                <div class="ui selection dropdown" id="prog">
+                    <input type="hidden" name="prog">
+                    <i class="dropdown icon"></i>
+                    <div class="default text" id="prog-text">Program</div>
+                    <div class="menu" id="prog-data-box">
                     </div>
-                    {% if form.password1.errors %}
-                    <div class="alert alert-secondary">
-                        <p>Password should be:</p>
-                        <ul>
-                            <li>Minimum of eight characters</li>
-                            <li>Must include a mix of upper and lower case</li>
-                            <li>Must include a number</li>
-                        </ul>
+                </div>
+                <div class="ui selection dropdown" id="year">
+                    <input type="hidden" name="year">
+                    <i class="dropdown icon"></i>
+                    <div class="default text">Year</div>
+                    <div class="menu" id="year-data-box">
                     </div>
-                    {% endif %}
                 </div>
                 <div class="d-flex justify-content-center">
                     <input type="submit" value="Submit" class="btn btn-style w-100 mt-3">
@@ -85,5 +110,39 @@
         </div>
     </div>
 </main>
+<script>
+{% include 'accounts/scripts/main.js' %}
 
+</script>
+<footer>
+    {% include 'partials/footer.html' %}
+</footer>
+<!--<script>-->
+<!--    $("#id_department").change(function () {-->
+<!--      var url = $("#registerForm").attr("data-profile-url");-->
+<!--      var departmentId = $(this).val();-->
+<!--      $.ajax({-->
+<!--        url: url,-->
+<!--        data: {-->
+<!--          'department': departmentId-->
+<!--        },-->
+<!--        success: function (data) {-->
+<!--          $("#id_program").html(data);-->
+<!--        }-->
+<!--      });-->
+<!--    });-->
+<!--     $("#id_program").change(function () {-->
+<!--      var url = $("#registerForm").attr("data-profile-url");-->
+<!--      var programId = $(this).val();-->
+<!--      $.ajax({-->
+<!--        url: url,-->
+<!--        data: {-->
+<!--          'program': programId-->
+<!--        },-->
+<!--        success: function (data) {-->
+<!--          $("#id_year").html(data);-->
+<!--        }-->
+<!--      });-->
+<!--    });-->
+<!--</script>-->
 {% endblock %}
