--- a/administration/templates/administration/user_management.html
+++ b/administration/templates/administration/user_management.html
@@ -6,7 +6,7 @@
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="container">
+<main class="container pt-5 mt-5">
     <div class='admin-div'>
         <small>Administration</small>
     </div>
@@ -18,10 +18,45 @@
         </div>
         <div class="flex-grow-1">
             <form method='GET'>
-                <div class="input-group">
-                    <button class="btn teal-btn" type='submit'>Search</button>
-                    {{form.name}}
+                <div class="d-flex bd-highlight">
+                    <div class="w-75 p-2 input-group">
+                        {{filter.form.username}}
+                        <div class="input-group-btn">
+                            <button class="btn teal-btn btn-default" type='submit'>Search</button>
+                        </div>
+                    </div>
+                    <div class="dropdown p-2 bd-highlight">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                                data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-funnel-fill" viewBox="0 0 16 16">
+                                <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5v-2z"/>
+                            </svg>
+                            Filter
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <li class="dropdown-item"> {{filter.form.date_joined.label_tag}}
+                                {{filter.form.date_joined}}
+                            </li>
+                            <li class="dropdown-item">{{filter.form.start_date.label_tag}}
+                                {{filter.form.start_date}}
+                            </li>
+                            <li class="dropdown-item">{{filter.form.end_date.label_tag}}
+                                {{filter.form.end_date}}
+                            </li>
+<!--                            <li class="dropdown-item">-->
+<!--                                <label class="form-check-label" for="id_is_superuser">-->
+<!--                                    Is Superuser : -->
+<!--                                </label>-->
+<!--                                {{filter.form.is_superuser}}-->
+<!--                            </li>-->
+                        </ul>
+                    </div>
                 </div>
+                <!--                <div class="input-group">-->
+                <!--                    <button class="btn teal-btn" type='submit'>Search</button>-->
+                <!--                    {{form.name}}-->
+                <!--                </div>-->
             </form>
         </div>
     </header>
@@ -36,51 +71,51 @@
 
             <table class="table able-striped table-hover table-bordered table-responsive-lg">
                 <thead class="bg-teal color-white ">
-                    <tr>
-                        <th>Username</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Email</th>
-                        <th>Date Joined</th>
-                        <th>Is_superuser</th>
-                        <th>Edit</th>
-                    </tr>
+                <tr>
+                    <th>Username</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Date Joined</th>
+                    <th>Is_superuser</th>
+                    <th>Edit</th>
+                </tr>
                 </thead>
                 <tbody>
-                    {% for user in users %}
-                    <tr>
-                        <td>{{user.username|capfirst}}</td>
-                        <td>{{user.first_name|capfirst}}</td>
-                        <td>{{user.last_name|capfirst}}</td>
-                        <td>{{user.email}}</td>
-                        <td>{{user.date_joined}}</td>
-                        <td>{% if user.is_superuser == False %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="red" class="bi bi-x"
-                                viewBox="0 0 16 16">
+                {% for user in users %}
+                <tr>
+                    <td>{{user.username|capfirst}}</td>
+                    <td>{{user.first_name|capfirst}}</td>
+                    <td>{{user.last_name|capfirst}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.date_joined}}</td>
+                    <td>{% if user.is_superuser == False %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="red" class="bi bi-x"
+                             viewBox="0 0 16 16">
+                            <path
+                                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                        {% else %}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green"
+                             class="bi bi-check" viewBox="0 0 16 16">
+                            <path
+                                    d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+                        </svg>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <a href="{% url 'administration:user-detail-update' user.pk %}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                                 class="bi bi-pencil-square" viewBox="0 0 16 16">
                                 <path
-                                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                <path fill-rule="evenodd"
+                                      d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
                             </svg>
-                            {% else %}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="green"
-                                class="bi bi-check" viewBox="0 0 16 16">
-                                <path
-                                    d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-                            </svg>
-                            {% endif %}
-                        </td>
-                        <td>
-                            <a href="{% url 'administration:user-detail-update' user.pk %}">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-                                    class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                    <path
-                                        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-                                    <path fill-rule="evenodd"
-                                        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-                                </svg>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
+                        </a>
+                    </td>
+                </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
@@ -110,24 +145,36 @@
                     <li class="page-item {% if page_obj.number == n %}disabled{% endif %}">
                         <span class="page-link">{{ n }}</span>
                     </li>
-                    {% elif n > page_obj.number|add:'-5' and n < page_obj.number|add:'5' %} <li class="page-item">
+                    {% elif n > page_obj.number|add:'-5' and n < page_obj.number|add:'5' %}
+                    <li class="page-item">
                         <a class="page-link" href="?page={{ n }}">{{ n }}</a>
-                        </li>
-                        {% endif %}
-                        {% endfor %}
-                        {% if page_obj.has_next %}
-                        <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT
-                            </a></li>
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                        {% endif %}
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT
+                    </a></li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                    {% endif %}
                 </ul>
             </nav>
         </div>
-            {% endif %}
+        {% endif %}
     </div>
 </main>
+<script>
+        $(function(){
+            $("#id_date_joined").datepicker();
+            $("#id_start_date").datepicker();
+            $("#id_end_date").datepicker();
+        });
+
+
+
+
+</script>
 {% endblock %}
