--- a/administration/templates/stats/stats.html
+++ b/administration/templates/stats/stats.html
@@ -1,13 +1,22 @@
 {% extends "stats/base.html" %}
-
+{% load static %}
 {% block title %}Stats{% endblock %}
 
 {% block content %}
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="container">
 
+<main class="container pt-5 mt-5">
+  <button
+        type="button"
+        class="btn btn-teal btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="34px" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+</svg>
+</button>
     <nav>
         <div class="nav nav-tabs" id="nav-tab" role="tablist">
             <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="tab" data-bs-target="#v-pills-profile"
@@ -230,5 +239,6 @@
             </div>
         </div>
     </div>
+
 </main>
 {% endblock %}
