--- a/templates/awesome.html
+++ b/templates/awesome.html
@@ -6,6 +6,14 @@ Well done!
 {% endblock %}
 
 {% block content %}
+<header>
+    {% include 'partials/_navbar.html' %}
+</header>
+
+<main class="container pt-5 mt-5 ">
+<a href="{% url 'homepage' %}" class="btn rounded-circle link-light btn-teal mx-5 mt-5 d-inline-flex flex-row align-items-center "> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="34" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+</svg></a>
 <div class="text-center w-50 mx-auto">
     <div class="mt-5">
         {% if riasec and personality %}
@@ -18,22 +26,20 @@ Well done!
             <div>
                 <h1>Congratulations!</h1>
                 <p class="fs-20">You completed all the test</p>
-                <p>click<a href="{% url 'assessment' %}" class="link-teal"> here</a> to continue</p>
+                <p>Click <a href="{% url 'assessment' %}" class="link-light btn-teal btn"> here </a> to continue</p>
             </div>
             {% else %}
             <div>
                 <h1>Awesome!</h1>
+                 <p class="fs-20">You completed the personality test</p>
+                <p>
+                    Click <a href="{% url 'riasec:test' %}" class="link-light btn-teal btn"> here </a> to proceed to career test
+                </p>
                 {% if riasec %}
                 <p class="fs-20">You completed the career test</p>
                 <p>
-                    Click <a href="{% url 'personalityTest:test' %}" class="link-teal">here</a> to proceed to
+                    Click <a href="{% url 'personalityTest:test' %}" class="link-light btn-teal btn"> here </a> to proceed to
                     personality test
-                </p>
-                {% endif %}
-                {% if personality %}
-                <p class="fs-20">You completed the personality test</p>
-                <p>
-                    Click <a href="{% url 'riasec:test' %}" class="link-teal">here</a> to proceed to career test
                 </p>
                 {% endif %}
             </div>
@@ -41,4 +47,5 @@ Well done!
         </div>
     </div>
 </div>
+</main>
 {% endblock %}
