optimized and new design

--- a/personalityTest/templates/personalityTest/testPage.html
+++ b/personalityTest/templates/personalityTest/testPage.html
@@ -31,7 +31,7 @@
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="{{question.id}}" id="disagree_{{question.id}}"
-                    value="2" required>
+                    value="2" required checked>
                 <label for="disagree_{{question.id}}">Disagree</label>
             </div>
             <div class="form-check">
