--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -16,7 +16,7 @@
         <div class="col-xs-6 col-sm-8">
             <div class="d-flex justify-content-end m-5">
                 <div class="align-self-center mx-2">
-                    <h1>PSYTEST</h1>
+                    <span class="brand-text fs-30">PSYTEST</span>
                 </div>
                 <div class="d-flex justify-content-center">
                     <img src="{% static 'images/jmcseal.png' %}" alt="" class="logo-50">
@@ -50,7 +50,7 @@
                             </div> -->
                             <a href="{% url 'password_reset' %}" class="fs-15">Forgot Password?</a>
                         </div>
-                        <button class="btn-style btn w-100 fs-17 p-2 rounded-pill">Login</button>
+                        <button class="btn-teal btn w-100 fs-17 p-2 rounded-pill">Login</button>
                     </div>
                     <!-- or div -->
                     <div class="d-flex justify-content-center my-2">
