--- a/static/css/util.css
+++ b/static/css/util.css
@@ -6703,6 +6703,14 @@ h6 {
 .bg-teal {
   background-color: teal;
 }
+
+.brand-text {
+  color: #008080;
+}
+
+.brand-text:hover {
+  color: rgb(0,128,128,0.8);
+}
 .color-teal {
   color: #008080;
 }
@@ -6856,20 +6864,35 @@ p {
   outline: none;
   box-shadow: none;
 }
+.btn-outline-white {
+  color: white;
+  border-color: white;
+}
+
+.btn-outline-white:hover {
+  color: white;
+  background-color: #008080;
+}
+
+.btn-outline-white:focus {
+  outline: none;
+  box-shadow: none;
+}
 
 .btn-teal {
   color: white;
-  background: teal;
+  background: #008080;
 }
 
+.btn-teal:hover {
+  color: white;
+  background: #008585;
+
+}
 .bg-ashgray {
   background-color: #b2beb5;
 }
 
-.btn-teal:hover {
-  background-color: rgb(0, 100, 100);
-  color: white;
-}
 
 .btn-teal:focus {
   outline: none;
