--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,28 +16,28 @@
     </div>
     {% endif %}
     <!-- Banner -->
-    <section class="banner px-5" style="background-color: #E5F2F2;">
-        <div class="content text-center p-b-160">
-            <div class="m-5">
-                <img src="{% static 'images/jmcseal.png' %}" alt="" class="logo-100">
-                <img src="{% static 'images/cite.png' %}" alt="" class="logo-100">
-                <img src="{% static 'images/psychology.png' %}" alt="" class="logo-100">
+    <div class="row m-0 bg-main">
+        <section class=" p-5 m-0">
+            <div class="d-flex justify-content-center align-self-center">
+                <div class="text-center">
+                    <img src="{% static 'images/jmcseal.png' %}" alt="" class="logo-100">
+                    <img src="{% static 'images/cite.png' %}" alt="" class="logo-100">
+                    <img src="{% static 'images/psychology.png' %}" alt="" class="logo-100">
+                    <div class="text-center">
+                        <header>
+                            <h1 class="fs-60 color-teal">Welcome!</h1>
+                        </header>
+                        <p class="fs-17 color-teal">Take a psychological test</p>
+                        <a href="{% url 'assessment' %}" class="btn btn-teal mt-3">Click here</a>
+                    </div>
+                </div>
             </div>
-            <header>
-                <h1 class="fs-60">Welcome!</h1>
-            </header>
-            <div>
-                <p class="fs-17">Take a psychological test</p>
-                <a href="{% url 'assessment' %}" class="btn btn-outline-teal mt-3">Click here</a>
-            </div>
-        </div>
-        <span class="image object align-self-center">
-            <img class="img-responsive border border-1 border-dark" src="{% static 'images/home-img.jpg' %}" />
-        </span>
-    </section>
+        </section>
+    </div>
+
     <section class="banner px-5 py-3" style="background-color: #f5f5dc;">
         <span class="image object">
-            <img  class="p-3" src="{% static 'images/decision.svg' %}" alt="" />
+            <img class="p-3" src="{% static 'images/decision.svg' %}" alt="" />
         </span>
         <div class="content d-flex align-self-center justify-content-center">
             <h5 class="">Learn what <span style="color: #0b3b5a;">career</span> suites you</h5>
@@ -45,13 +45,13 @@
     </section>
     <section class="banner px-5 py-3" style="background-color: #f5f5f5;">
         <span class="image object">
-            <img  class="p-3" src="{% static 'images/personality.svg' %}" alt="" />
+            <img class="p-3" src="{% static 'images/personality.svg' %}" alt="" />
         </span>
-            <div class="content d-flex align-self-center justify-content-center">
-                <div>
-                    <h5 class="">Learn what <span style="color: #0b3b5a;">personality</span> attributes you have</h5>
-                </div>
+        <div class="content d-flex align-self-center justify-content-center">
+            <div>
+                <h5 class="">Learn what <span style="color: #0b3b5a;">personality</span> attributes you have</h5>
             </div>
+        </div>
     </section>
 </main>
 <footer>
