commented get_age in the models

--- a/administration/templates/stats/stats.html
+++ b/administration/templates/stats/stats.html
@@ -7,7 +7,7 @@
     {% include 'partials/_navbar.html' %}
 </header>
 
-<main class="container pt-5 mt-5">
+<main class="container mt-2">
   <button
         type="button"
         class="btn btn-teal btn-floating btn-lg"
