--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -6,7 +6,7 @@
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="container pt-5 mt-5 ">
+<main class="container mt-3">
     <div class="row justify-content-center ">
         <div class="col-sm-2 col-xs-12 p-0 m-0">
             <div class="border-1-round-box p-3 m-2 status">
