--- a/administration/templates/administration/assigned-users.html
+++ b/administration/templates/administration/assigned-users.html
@@ -5,7 +5,7 @@
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="container mt-5">
+<main class="container">
     <div class="row justify-content-center mt-3">
         <div class="col-sm-4 col-xs-6">
             <h1>Users to Check</h1>
