--- a/accounts/templates/accounts/profile-edit.html
+++ b/accounts/templates/accounts/profile-edit.html
@@ -8,7 +8,7 @@
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="container">
+<main class="container my-2">
     <div class="row justify-content-center">
         <form method="post" class="p-4 border rounded-3 bg-light mt-5">
             {% csrf_token %}
@@ -115,6 +115,5 @@
 </main>
 <script>
     {% include 'accounts/scripts/main.js' %}
-
 </script>
 {% endblock %}
