--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -8,7 +8,7 @@
 <header>
     {% include 'partials/_navbar.html' %}
 </header>
-<main class="profile-container mt-4">
+<main class="profile-container my-2">
     <div class="row justify-content-center gap-3">
         <div class="row justify-content-center">
             <div class="d-flex justify-content-between">
