--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -43,7 +43,7 @@
             <h5 class="">Learn what <span style="color: #0b3b5a;">career</span> suites you</h5>
         </div>
     </section>
-    <section class="banner px-5 py-3" style="background-color: #f5f5f5;">
+    <section class="banner px-5" style="background-color: #f5f5f5;">
         <span class="image object">
             <img class="p-3" src="{% static 'images/personality.svg' %}" alt="" />
         </span>
@@ -54,7 +54,7 @@
         </div>
     </section>
 </main>
-<footer class="page-footer font-small pt-4">
+<footer>
     {% include 'partials/footer.html' %}
 </footer>
 {% endblock %}
