--- a/templates/assessment.html
+++ b/templates/assessment.html
@@ -46,35 +46,6 @@
                         </svg>
                         {% endif %}
                     </p>
-
-                    <div>
-                        {% if personalityTest_results and riasec_results %}
-                        {% if obj.is_result %}
-                        <div>
-                            <span>Result</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="green"
-                                class="bi bi-check" viewBox="0 0 16 16">
-                                <path
-                                    d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-                            </svg>
-                            <span>is ready</span>
-                        </div>
-                        {% else %}
-                        <div>
-                            <span>Result</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="red" class="bi bi-x"
-                                viewBox="0 0 16 16">
-                                <path
-                                    d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
-                            </svg>
-                            <span>isn't ready</span>
-                        </div>
-                        {% endif %}
-                        {% endif %}
-                    </div>
-                    <hr>
-                    <!-- request section -->
-                    {% include 'partials/request-section.html' %}
                 </div>
             </div>
         </div>
@@ -92,13 +63,9 @@
                     <div class="m-t-25">
                         <div class="text-center">
                             <div class="mb-5">
-                                {% if obj.is_result %}
-                                <p>Your result is now ready</p>
+                                <p>Your have finished all the test</p>
                                 <a href="{% url 'profile:user-stats' obj.user.username obj.user.pk %}"
                                     class="btn btn-teal mt-2">view result</a>
-                                {% else %}
-                                <h2>Your answer is being evaluated</h2>
-                                {% endif %}
                             </div>
                             <div>
                                 <p>Help us improve by giving us feedback <a href="{% url 'evaluation:view' %}"
@@ -166,17 +133,6 @@
                         </div>
                         <div {% if riasec_results %} class="text-muted" {% endif %}>
                             Career Test
-                        </div>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="{% url 'generaliq:generalIQTest' %}"
-                        class="text-center link-teal {% if riasec_results %}disabled-links{% endif %}">
-                        <div>
-                            <img src="https://img.icons8.com/external-wanicon-flat-wanicon/120/000000/external-brain-training-and-coaching-wanicon-flat-wanicon.png"/>
-                        </div>
-                        <div {% if riasec_results %} class="text-muted" {% endif %}>
-                            General IQ Test
                         </div>
                     </a>
                 </div>
