--- a/userprofile/templates/userprofile/partials/tab-personality.html
+++ b/userprofile/templates/userprofile/partials/tab-personality.html
@@ -1,22 +1,12 @@
-{% if not request.user.is_superuser and not profile.is_result %}
-<div class="m-3">
-    <p>Your result is being evaluate</p>
-</div>
-{% else %}
-{% if personalityTest_result and profile_result %}
-    {% if request.user.is_superuser and not profile.is_result and request.user.username == profile.user.username%}
-    <div class="m-3">
-        <p>Your result is being evaluate</p>
-    </div>
-    {% else %}
-
+{% if personalityTest_result %}
 <div class="d-flex justify-content-between">
     <div class="m-3">
         <p class="text-muted">Test taken: {{personalityTest_result.date_created}}</p>
     </div>
     {% if request.user.is_superuser %}
     {% if profile.user.username != request.user.username %}
-    <button class="btn btn-danger m-3" type="button" data-bs-toggle="modal" data-bs-target="#delete-personality-modal">Delete record</button>
+    <button class="btn btn-danger m-3" type="button" data-bs-toggle="modal"
+        data-bs-target="#delete-personality-modal">Delete record</button>
     {% include 'userprofile/partials/delete-personality-modal.html' %}
     {% endif %}
     {% endif %}
@@ -89,8 +79,6 @@
 </div>
 
 {% include 'stats/recommendations/offeredcareer.html' %}
-{% endif %}
-{% else %}
 {% if messages %}
 {% for message in messages %}
 <div id="personality_alert" class="alert alert-{{message.extra_tags}} m-3" role="alert">
@@ -98,8 +86,9 @@
 </div>
 {% endfor %}
 {% endif %}
+
+{% else %}
 <div class="m-3">
     <p>No record found</p>
 </div>
-{% endif %}
 {% endif %}
